[package]
name = "trololors"
version = "0.1.0"
authors = ["Dmitriy Kovalenko <dmtr.kovalenko@outlook.com>"]
description = "Not the fastest terminal colors library. Don't even ask about size."
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
